--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Case decomposition and ellipsis}
+\chapter{Case decomposition}
 
 At the beginning of the previous chapter I showed that the case scale \tsc{nom < acc < dat} appears in headless relatives. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} makes this explicit: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
@@ -12,27 +12,10 @@ I am not after a theory in which the case hierarchy is not something constructio
 \citet{himmelreich2017} works this intuition out in a different way.
 }
 
-In this chapter I show that the case scale can be derived is case is decomposed. The precise facts in headless relatives relatives follow after adding an ellipsis that deletes phrases.
+This chapter is structured as follows. First, I introduce a specific case decomposition \citep{caha2009}. In the next two sections, I show how this case decomposition is able to derive the syncretism and formal containment facts from the previous chapter. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition translates to the case scale observed in headless relatives.
 
 
-\section{Case decomposition}
-
-The intuition: case is complex
-
-containment:
-
-\exg. luw -e:l -na\\
- 3\tsc{sg}.\ac{nom} -\ac{acc} -\ac{dat}\\ \flushfill{Khanty, \pgcitealt{nikolaeva1999}{16}}
-
-syncretism:
-
-contigent zones, no ABA. spellout is not only exact match, but also a subset of the features can be a match
-
-I show how this can be derived, within Nanosyntax, the framework in which I work this proposal out.
-
-
-
-\subsection{The basic idea}
+\section{The basic idea}
 
 \citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows monotonically.
 This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \tsc{f}1) plus one extra (here \tsc{f}2). Dative has all the features accusative has (\tsc{f} and \tsc{f}2) plus one extra (\tsc{f}3).
@@ -54,10 +37,8 @@ This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the f
 
 The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next section shows how case containment and syncretism effects follow naturally. Later in this chapter I show how the decomposition also derives the case competition facts in headless relatives.
 
-%should I talk about alternatives and why they do not work?
 
-
-\subsection{Deriving syncretism}
+\section{Deriving syncretism}\label{sec:syncretism}
 
 In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
 
@@ -69,6 +50,13 @@ In this section I show how case syncretism patterns can be derived from the case
 \end{table}
 
 The intuition is the following.
+
+
+% If different cases in a paradigm are syncretic, they can be stored as a single form in the lexicon. That is, Dutch only has a single form in its lexicon for \tit{jullie}. This form is carries \tsc{f1}, \tsc{f2} and \tsc{f3} (see Table \ref{tbl:case-decomposed}). In the framework I will be using (Nanosyntax), lexical items apply to feature sets based on containment. \tsc{f1} and \tsc{f2} are contained in the set of \tsc{f1}, \tsc{f2} and \tsc{f3}.
+
+% This last example also illustrates that the laid out system is unable to derive an ABA pattern. The unability of the system to derive such a pattern is a welcome one, since the pattern is unattested cross-linguistically. In an ABA pattern, the nominative and the dative are syncretic, to the exclusion of the accusative. Staying close to the German example, in this hypothetical example, the dative would be \tit{ihr}, the accusative \tit{sie}, and the nominative \tit{ihr} again.
+% This result could never be derived with the lexical entries given in \ref{ex:german-sie-lexicon} and \ref{ex:german-ihr-lexicon}. \tit{Ihr} is inserted for the dative and the cases contained in it (so accusative and nominative), unless a more specific lexical entry is found. \tit{Sie} is the more specific lexical entry that is found from the accusative on. From the accusative on, \tit{sie} will be inserted until a more specific entry is found. If no entry is specified for nominative, \tit{sie} will surface. \tit{Ihr} will not resurface, because the lexical entry for \tit{sie} will remain to be more specific.
+
 %In Nanosyntax (the framework I shall be using in this study), lexical
 % items apply to feature sets not based on identity, but on the basis of a containment
 % relation.
@@ -175,18 +163,15 @@ The lexical entry for \tit{tær} `3\tsc{sg}.\tsc{dat}' is given in \ref{ex:faroe
 \end{forest}
 \label{ex:faroese-taer-lexicon}
 
-This brings me to the part of the discussion about matching. The syntactic structures and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized. Examples of syntactic structures are given in \ref{ex:faroese-spellout}.
+This brings me to the part of the discussion about matching. The syntactic structures and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
+Examples of syntactic structures are given in \ref{ex:faroese-tu-spellout} to \ref{ex:faroese-taer-spellout}.
 The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place corresponding the phonology next to it.
-\ref{ex:faroese-teg-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-teg-lexicon}, and it is spelled out as \tit{teg}.
-\ref{ex:faroese-taer-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-taer-lexicon}, and it is spelled out as \tit{tær}.
 
-\ex.\label{ex:faroese-spellout}
-\a. \begin{forest} boom
+\ex. \begin{forest} boom
 [\tsc{nomP},name=nomp,
 tikz={
-\node[label=below right:\tit{tú},
+\node[label=below:\tit{tú},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(nomp)(nom)(3sg)(np)]{};
 }
     [\ac{nom},name=nom]
@@ -196,12 +181,14 @@ fit=(nomp)(nom)(3sg)(np)]{};
 ]
 \end{forest}
 \label{ex:faroese-tu-spellout}
-\b. \begin{forest} boom
+
+\ref{ex:faroese-teg-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-teg-lexicon}, and it is spelled out as \tit{teg}.
+
+\ex. \begin{forest} boom
 [\tsc{accP},name=accp,
 tikz={
-\node[label=below right:\tit{teg},
+\node[label=below:\tit{teg},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(accp)(acc)(3sg)(np)]{};
 }
     [\tsc{acc},name=acc]
@@ -214,12 +201,14 @@ fit=(accp)(acc)(3sg)(np)]{};
 ]
 \end{forest}
 \label{ex:faroese-teg-spellout}
-\b. \begin{forest} boom
+
+\ref{ex:faroese-taer-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-taer-lexicon}, and it is spelled out as \tit{tær}.
+
+\ex. \begin{forest} boom
 [\tsc{datP},name=datp,
 tikz={
-\node[label=below right:\tit{tær},
+\node[label=below:\tit{tær},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(datp)(dat)(3sg)(np)]{};
 }
     [\tsc{dat},name=dat]
@@ -268,9 +257,8 @@ The syntactic structure of the dative, given in \ref{ex:dutch-jullie-spellout-da
 \ex. \begin{forest} boom
 [\tsc{datP},name=datp,
 tikz={
-\node[label=below right:\tit{jullie},
+\node[label=below:\tit{jullie},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(datp)(dat)(2pl)(np)]{};
 }
     [\tsc{dat},name=dat]
@@ -287,7 +275,7 @@ fit=(datp)(dat)(2pl)(np)]{};
 \end{forest}
 \label{ex:dutch-jullie-spellout-dat}
 
-The syntactic structure of the accusative second person plural is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, the syntactic structure in the lexical entry \tbf{contains} the syntactic structure of the accusative.
+The syntactic structure of the accusative second person plural is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, the syntactic structure in the lexical entry contains the syntactic structure of the accusative.
 I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-acc}, marking the subpart of the tree that matches the syntactic structure in gray.
 
 \ex. \begin{forest} boom
@@ -297,7 +285,6 @@ I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-ac
       tikz={
       \node[draw,circle,DG,
       fill=DG,fill opacity=0.2,
-      xscale=0.8,yscale=1,
       fit=(accp)(acc)(2pl)(np)]{};
       }
           [\tsc{acc},name=acc]
@@ -318,9 +305,8 @@ As a result, the accusative is spelled out as \tit{jullie}, shown in \ref{ex:dut
 \ex. \begin{forest} boom
 [\tsc{accP},name=accp,
 tikz={
-\node[label=below right:\tit{jullie},
+\node[label=below:\tit{jullie},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(accp)(acc)(np)(2pl)]{};
 }
     [\tsc{acc},name=acc]
@@ -336,7 +322,7 @@ fit=(accp)(acc)(np)(2pl)]{};
 
 
 
-The same holds for the nominative second person plural. The syntactic structure is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, again, the syntactic structure in the lexical entry \tbf{contains} the syntactic structure of the nominative.
+The same holds for the nominative second person plural. The syntactic structure is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, again, the syntactic structure in the lexical entry contains the syntactic structure of the nominative.
 I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-nom}, marking the subpart of the tree that matches the syntactic structure in gray.
 
  \ex. \begin{forest} boom
@@ -348,7 +334,6 @@ I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-no
            tikz={
            \node[draw,circle,DG,
            fill=DG,fill opacity=0.2,
-           xscale=0.8,yscale=1,
            fit=(nomp)(nom)(2pl)(np)]{};
            }
                [\ac{nom},name=nom]
@@ -368,9 +353,8 @@ As a result, the nominative is spelled out as \tit{jullie}, as shown in \ref{ex:
 \begin{forest} boom
 [\tsc{nomP},name=nomp,
 tikz={
-\node[label=below right:\tit{jullie},
+\node[label=below:\tit{jullie},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(nomp)(nom)(2pl)(np)]{};
 }
     [\ac{nom},name=nom]
@@ -385,7 +369,7 @@ fit=(nomp)(nom)(2pl)(np)]{};
 A question arises at this point. Why is the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical entry for the dative (and the accusative).
 The reason for that comes from how competition between lexical entries is regulated. When two lexical entries compete, the best fit wins. The best fit is the lexical entry with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
 
-\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
+\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020a}):\\
 When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
 \label{ex:elsewhere-condition}
 
@@ -393,10 +377,9 @@ Let me come back to the Faroese examples. Consider first again the syntactic str
 All the Faroese lexical entries \ref{ex:faroese-tu-lexicon}, \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure for it.
 \ref{ex:faroese-taer-lexicon} has two unused features: \tsc{f2} and \tsc{f3}. \ref{ex:faroese-teg-lexicon} has one unused feature: \tsc{f2}. Only \ref{ex:faroese-tu-lexicon} does not have any unused features, hence is wins the competition over the other two.
 
-Regarding the syntactic structure \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure. \footnote{
+Regarding the syntactic structure \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure.
 \ref{ex:faroese-tu-lexicon} is not even a candidate here, because it does not contain the syntactic structure (it lacks \tsc{f2}.)
-}
-However, only \ref{ex:faroese-taer-lexicon} does not have any unused features, and it is inserted.
+Only \ref{ex:faroese-taer-lexicon} does not have any unused features, and it is inserted.
 
 The Table in \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived. I also how the system is unable to derive an ABA, which is a pattern unattested crosslinguistically.
 
@@ -438,9 +421,8 @@ The syntactic structure in \ref{ex:icelandic-okkur-spellout-dat} is contained in
 \ex. \begin{forest} boom
 [\tsc{datP},name=datp,
 tikz={
-\node[label=below right:\tit{okkur},
+\node[label=below:\tit{okkur},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(datp)(dat)(3sg)(np)]{};
 }
     [\tsc{dat},name=dat]
@@ -462,9 +444,8 @@ The syntactic structure in \ref{ex:icelandic-okkur-spellout-acc} is contained in
 \ex. \begin{forest} boom
 [\tsc{accP},name=accp,
 tikz={
-\node[label=below right:\tit{okkur},
+\node[label=below:\tit{okkur},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(accp)(acc)(3sg)(np)]{};
 }
     [\tsc{acc},name=acc]
@@ -485,9 +466,8 @@ Therefore, \ref{ex:icelandic-okkur-lexicon} wins the competition, and the syntac
 \ex. \begin{forest} boom
 [\tsc{nomP},name=nomp,
 tikz={
-\node[label=below right:\tit{við},
+\node[label=below:\tit{við},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(nomp)(nom)(3sg)(np)]{};
 }
     [\ac{nom},name=nom]
@@ -542,9 +522,8 @@ The syntactic structure in \ref{ex:german-ihr-spellout} is contained in the synt
 \ex. \begin{forest} boom
 [\tsc{datP},name=datp,
 tikz={
-\node[label=below right:\tit{ihr},
+\node[label=below:\tit{ihr},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(datp)(dat)(3sg)(np)]{};
 }
     [\tsc{dat},name=dat]
@@ -568,9 +547,8 @@ Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic s
 \ex. \begin{forest} boom
 [\tsc{accP},name=accp,
 tikz={
-\node[label=below right:\tit{sie},
+\node[label=below:\tit{sie},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(accp)(acc)(3sg)(np)]{};
 }
     [\tsc{acc},name=acc]
@@ -590,9 +568,8 @@ The former, \ref{ex:german-sie-lexicon}, has one unused feature: \tsc{f}2. The l
 \ex. \begin{forest} boom
 [\tsc{nomP},name=nomp,
 tikz={
-\node[label=below right:\tit{sie},
+\node[label=below:\tit{sie},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(nomp)(nom)(3sg)(np)]{};
 }
     [\ac{nom},name=nom]
@@ -606,9 +583,8 @@ fit=(nomp)(nom)(3sg)(np)]{};
 This last example also illustrates that the laid out system is unable to derive an ABA pattern. The unability of the system to derive such a pattern is a welcome one, since the pattern is unattested cross-linguistically. In an ABA pattern, the nominative and the dative are syncretic, to the exclusion of the accusative. Staying close to the German example, in this hypothetical example, the dative would be \tit{ihr}, the accusative \tit{sie}, and the nominative \tit{ihr} again.
 This result could never be derived with the lexical entries given in \ref{ex:german-sie-lexicon} and \ref{ex:german-ihr-lexicon}. \tit{Ihr} is inserted for the dative and the cases contained in it (so accusative and nominative), unless a more specific lexical entry is found. \tit{Sie} is the more specific lexical entry that is found from the accusative on. From the accusative on, \tit{sie} will be inserted until a more specific entry is found. If no entry is specified for nominative, \tit{sie} will surface. \tit{Ihr} will not resurface, because the lexical entry for \tit{sie} will remain to be more specific.
 
-%say how others do not account for this, at the place where it's necessary, so the end?
 
-\subsection{Deriving case containment}
+\section{Deriving case containment}
 
 In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
 
@@ -639,9 +615,8 @@ The syntactic structure in \ref{ex:khanty-luw-spellout} is contained in the synt
 \ex. \begin{forest} boom
 [\tsc{nomP},name=nomp,
 tikz={
-\node[label=below right:\tit{luw},
+\node[label=below:\tit{luw},
 draw,circle,
-xscale=0.8,yscale=1,
 fit=(nomp)(nom)(3sg)(np)]{};
 }
     [\ac{nom},name=nom]
@@ -651,11 +626,11 @@ fit=(nomp)(nom)(3sg)(np)]{};
 ]
 \end{forest}\label{ex:khanty-luw-spellout}
 
-In the previous section I only gave examples in which the forms were syncretic or suppletive (i.e. formally unrelated). The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modelled by letting \tsc{nom}P still be realized by the lexical entry for the nominative, and giving the accusative its own realization.\footnote{
+In the previous section I only gave examples in which the forms were syncretic or suppletive (i.e. formally unrelated). The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting \tsc{nom}P still be realized by the lexical entry for the nominative, and giving the accusative its own realization.\footnote{
 Note that it is crucial here to have a theory in which the accusative contains the nominative. If not, it would be a surprise that the nominative is contained in the accusative.
 }
 
-Accordingly, I give the lexical entry for the accusative marker \tit{-e:l} in \ref{ex:khanty-luw-el}.
+Accordingly, I give the lexical entry for the accusative marker \tit{-e:l} in \ref{ex:khanty-el-lexicon}.
 
 \ex. \begin{forest} boom
   [\ac{acc}P
@@ -664,24 +639,22 @@ Accordingly, I give the lexical entry for the accusative marker \tit{-e:l} in \r
   {\draw (.east) node[right]{⇔ \tit{-e:l}}; }
 \end{forest}\label{ex:khanty-el-lexicon}
 
-So, \tit{luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This brings me to another detour into the Nanosyntactic theory. To understand how multiple morphemes combine, I need to address the spellout procedure in Nanosyntax, which happens according to a spellout algorithm. Part of this algorithm are two movement options, that create different constituents. The two movement options are Cinquan rollup movement and spec to spec movement.
+So, \tit{luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This brings me to another detour into the Nanosyntactic theory, which is about spellout driven movement.
 
-Spellout in Nanosyntax only targets constituents. So it is impossible to let accP spell out \tit{e:l} without spelling out also everything below it.
+Spellout in Nanosyntax only targets constituents. So, it is impossible to let \tsc{accP} spell out as \tit{e:l} while it contains \tsc{nom}P.\footnote{Notice that this would also have given the incorrect order of the morphemes: \tit{e:l-luw} instead of \tit{luw-e:l}.}
 
 \ex. \begin{forest} boom
 [\ac{acc}P,name=accp, s sep=30mm,
 tikz={
 \node[label={below left:\tit{-e:l}},
-draw,circle,rotate=45,
-xscale=0.7,yscale=0.9,
+draw,circle,rotate=-45,
 fit=(acc)(accp)]{};
 }
     [\ac{acc},name=acc]
     [\tsc{nomP},name=nomp,
     tikz={
-    \node[label=below right:\tit{luw},
+    \node[label=below:\tit{luw},
     draw,circle,
-    xscale=0.8,yscale=1,
     fit=(nomp)(nom)(3sg)(np)]{};
     }
         [\ac{nom},name=nom]
@@ -693,27 +666,51 @@ fit=(acc)(accp)]{};
 \end{forest}
 \label{ex:khanty-el-luw-spellout}
 
-The \tsc{acc}P can only be spelled out if the \tsc{nom}P has moved away. So like this:
+The lexical entry in \ref{ex:khanty-el-lexicon} can only be a match for the syntactic structure if \tsc{nomP} moves away, leaving the \tsc{accP} containing \tsc{f2} behind. In other words, the complement of \tsc{f2} needs to be moved away.
+
+Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax. As I illustrated in Section \ref{sec:syncretism}, lexical entries are matched using the Superset Principle and the Elsewhere Condition. However, if there is no match in the lexicon for a particular syntactic structure, two types of movement can take place, in a fixed order. The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
+This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces. In Section XX I discuss `regular' syntactic movement in Nanosyntax.
+}
+For the discussion in this section, only the second type of movement is relevant: complement movement. In this type of movement, the complement or a particular feature moves to the specifier of that same particular feature.
+%add stuff about why cinque movements, about specifiers and what they are, see pavel's book
+
+This is exactly the type of movement I described necessary for the Khanty pronoun. The movement is displayed in \ref{ex:khanty-luw-el-movement}. The complement of \tsc{f2}, the \tsc{nom}P, the lower right circled portion in the structure, moves to the specifier of \tsc{acc}P. The strikethrough of the lower \tsc{nom}P indicates that the complement of \tsc{f}2 disappears.
+
+\begin{forest} boom
+[\ac{acc}P,name=accp2
+   [\tsc{nomP},name=nomp
+       [\tit{luw}, roof]
+   ]
+   [\ac{acc}P,name=accp
+        [\ac{acc},name=acc]
+        [\sout{\tsc{nomP}},name=nomp1,
+         tikz={
+         \node[label=below:\tit{luw},
+         draw,circle,
+         fit=(nomp1)(nom1)(3sg1)(np1)]{};
+         }
+       [\ac{nom},name=nom1]
+       [NP,name=np1
+           [\tsc{3sg},name=3sg1, roof],baseline
+       ]
+   ]
+   ]
+]
+\draw[->,dashed] (nomp1) to[out=south west,in=east] (nomp);
+\end{forest}
+\label{ex:khanty-luw-el-movement}
+
+The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. Now the syntactic structre in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \tsc{acc}P is spelled out as \tit{e:l}.
 
 \ex. \begin{forest} boom
-[\ac{acc}P,name=accp2, s sep=20mm
-    [\tsc{nomP},name=nomp,
-    tikz={
-    \node[label=below right:\tit{luw},
-    draw,circle,
-    xscale=0.8,yscale=1,
-    fit=(nomp)(nom)(3sg)(np)]{};
-    }
-        [\ac{nom},name=nom]
-        [NP,name=np
-            [\tsc{3sg},name=3sg, roof],baseline
-        ]
+[\ac{acc}P,name=accp2
+    [\tsc{nomP},name=nomp
+        [\tit{luw}, roof]
     ]
-    [\ac{acc}P,name=accp,
+    [\ac{acc}P,name=accp, s sep=20mm,
     tikz={
-    \node[label={below right:\tit{-e:l}},
+    \node[label={below:\tit{-e:l}},
     draw,circle,
-    xscale=0.7,yscale=0.9,
     fit=(acc)(accp)]{};
     }
      [\ac{acc},name=acc]
@@ -721,8 +718,6 @@ The \tsc{acc}P can only be spelled out if the \tsc{nom}P has moved away. So like
 ]
 \end{forest}
 \label{ex:khanty-luw-el-spellout}
-
-This is exactly one of the movement options that exists in the spellout algorithm.
 
 Just as the accusative, the dative also has its own realization. The lexical entry for \tit{-na} is given in \ref{ex:khanty-na-lexion}.
 
@@ -736,66 +731,79 @@ Just as the accusative, the dative also has its own realization. The lexical ent
 
 Again, because the spellout only targets constituents, it cannot be spelled out right after it has been merged, shown in \ref{ex:khanty-na-luw-el-spellout}.
 
-\ex. \begin{forest} boom
-[\ac{acc}P,name=accp2, s sep=20mm
-    [\tsc{nomP},name=nomp,
-    tikz={
-    \node[label=below right:\tit{luw},
-    draw,circle,
-    xscale=0.8,yscale=1,
-    fit=(nomp)(nom)(3sg)(np)]{};
-    }
-        [\ac{nom},name=nom]
-        [NP,name=np
-            [\tsc{3sg},name=3sg, roof],baseline
+\ex.
+\begin{forest} boom
+[\tsc{datP},name=datp
+    [\ac{dat},name=dat]
+    [\ac{acc}P,name=accp2
+        [\tsc{nomP},name=nomp
+            [\tit{luw}, roof]
         ]
-    ]
-    [\ac{acc}P,name=accp,
-    tikz={
-    \node[label={below right:\tit{-e:l}},
-    draw,circle,
-    xscale=0.7,yscale=0.9,
-    fit=(acc)(accp)]{};
-    }
-     [\ac{acc},name=acc]
+        [\ac{acc}P,name=accp, s sep=20mm,
+        tikz={
+        \node[label={below:\tit{-e:l}},
+        draw,circle,
+        fit=(acc)(accp)]{};
+        }
+         [\ac{acc},name=acc]
+        ]
     ]
 ]
 \end{forest}
-\label{ex:khanty-na-luw-el-spellout}
+\label{ex:khanty-luw-el-na-movement}
+
+so we are going to do the movement again
+
+\ex.
+\begin{forest} boom
+[\tsc{datP}
+    [\ac{acc}P,name=accp
+        [\tsc{nomP}
+            [\tit{luw}, roof]
+        ]
+        [\ac{acc}P
+            [\tit{-e:l}, roof]
+        ]
+    ]
+    [\tsc{datP},name=datp
+        [\ac{dat},name=dat]
+        [\sout{\ac{acc}P},name=accp2,
+         tikz={
+         \node[draw,circle,
+         fit=(accp2)(luw)(el)]{};
+         }
+            [\tsc{nomP},name=nomp
+                [\tit{luw},name=luw, roof]
+            ]
+            [\ac{acc}P,name=acc
+                [\tit{-e:l},name=el, roof]
+            ]
+        ]
+    ]
+]
+\draw[->,dashed] (accp2) to[out=south west,in=east] (accp);
+\end{forest}
+\label{ex:khanty-luw-el-na-spellout}
+
+tada! it fits!
 
 Instead, the whole complement needs to be moved out of the \tsc{dat}P. Now the lexical entry can be inserted.
 
 \ex.
 \begin{forest} boom
 [\tsc{datP}
-    [\ac{acc}P,name=accp2, s sep=20mm
-        [\tsc{nomP},name=nomp,
-        tikz={
-        \node[label=below right:\tit{luw},
-        draw,circle,
-        xscale=0.8,yscale=1,
-        fit=(nomp)(nom)(3sg)(np)]{};
-        }
-            [\ac{nom},name=nom]
-            [NP,name=np
-                [\tsc{3sg},name=3sg, roof],baseline
-            ]
+    [\ac{acc}P,name=accp2
+        [\tsc{nomP},name=nomp
+            [\tit{luw}, roof]
         ]
-        [\ac{acc}P,name=accp,
-        tikz={
-        \node[label={below right:\tit{-e:l}},
-        draw,circle,
-        xscale=0.7,yscale=0.9,
-        fit=(acc)(accp)]{};
-        }
-         [\ac{acc},name=acc]
+        [\ac{acc}P,name=accp
+            [\tit{-e:l}, roof]
         ]
     ]
-    [\tsc{datP},name=datp,
+    [\tsc{datP},name=datp, s sep=20mm,
     tikz={
-    \node[label={below right:\tit{-na}},
+    \node[label={below:\tit{-na}},
     draw,circle,
-    xscale=0.7,yscale=0.9,
     fit=(dat)(datp)]{};
     }
         [\ac{dat},name=dat]
@@ -808,46 +816,15 @@ Instead, the whole complement needs to be moved out of the \tsc{dat}P. Now the l
 
 
 
-\section{Ellipsis}
+\section{Deriving the case scale in headless relatives}
 
-Ellipsis targets phrases
-
-it does not delete elements one by one
-
-(1) Sluicing
-Someone woke up early
-but I have no idea who woke up early.
-
-(2) VP ellipsis
-John woke up early, and Mary did wake up early.
-
-(3) Fragment answers
-Q: Who woke up early?
-A: John woke up early
-
-
-(Õ) VP Ellipsis:
-a. John was hassled by the police and Mary was [VP hassled by the police ] too.
-b. John put his beer on the floor, so Mary did [VP put her beer on the floor ]
-
-
-
-
-
-I will climb a mountain today but he will not [climb a mountain today]
-
-
-\section{Reflex of morphology in syntax}
-
-
-\subsection{Morphology}
+\ac{nom} < \ac{acc} < \ac{dat} scale.
 
 \ex.
 \begin{forest} boom
   [\tsc{datP},name=datp,
   tikz={
   \node[draw,circle,LG,
-  xscale=0.8,yscale=1,
   fill opacity=0.2,
   fill=LG,
   fit=(datp)(dat)(nom)(x)]{};
@@ -856,7 +833,6 @@ I will climb a mountain today but he will not [climb a mountain today]
         [\ac{acc}P,name=accp,
         tikz={
         \node[draw,circle,
-        xscale=0.75,yscale=0.95,
         fill opacity=0.2,
         fill=DG,DG,
         fit=(accp)(acc)(nom)(np)(x)]{};
@@ -878,7 +854,6 @@ I will climb a mountain today but he will not [climb a mountain today]
   [\tsc{datP},name=datp,
   tikz={
   \node[draw,circle,LG,
-  xscale=0.8,yscale=1,
   fill opacity=0.2,
   fill=LG,
   fit=(datp)(dat)(nom)(x)]{};
@@ -889,7 +864,6 @@ I will climb a mountain today but he will not [climb a mountain today]
           [\tsc{nomP},name=nomp,
           tikz={
           \node[draw,circle,DG,
-          xscale=0.7,yscale=0.9,
           fill opacity=0.2,
           fill=DG,
           fit=(nomp)(nom)(np)(x)]{};
@@ -910,7 +884,6 @@ I will climb a mountain today but he will not [climb a mountain today]
       [\ac{acc}P,name=accp,
       tikz={
       \node[draw,circle,
-      xscale=0.8,yscale=1,
       fill opacity=0.2,
       fill=LG,LG,
       fit=(accp)(acc)(nom)(x)]{};
@@ -919,7 +892,6 @@ I will climb a mountain today but he will not [climb a mountain today]
           [\tsc{nomP},name=nomp,
           tikz={
           \node[draw,circle,DG,
-          xscale=0.75,yscale=0.95,
           fill opacity=0.2,
           fill=DG,
           fit=(nomp)(nom)(x)]{};
@@ -947,7 +919,6 @@ I will climb a mountain today but he will not [climb a mountain today]
               [\ac{acc}P,name=accp,
               tikz={
               \node[draw,circle,
-              xscale=0.775,yscale=0.975,
               fit=(accp)(acc)(nom)(x)]{};
               }
                 [\ac{acc},name=acc]
@@ -965,7 +936,6 @@ I will climb a mountain today but he will not [climb a mountain today]
         [\textcolor{LG}{\tsc{accP}},name=accp,
         tikz={
         \node[draw,circle,
-        xscale=0.775,yscale=0.975,
         fit=(accp)(acc)(nom)(x)]{};
         }
             [\textcolor{LG}{\ac{acc}},name=acc,edge=LG]
@@ -994,7 +964,6 @@ I will climb a mountain today but he will not [climb a mountain today]
                 [\tsc{nomP},name=nomp,
                 tikz={
                 \node[draw,circle,
-                xscale=0.75,yscale=0.95,
                 fit=(nomp)(nom)(x)]{};
                 }
                     [\ac{nom},name=nom]
@@ -1010,7 +979,6 @@ I will climb a mountain today but he will not [climb a mountain today]
         [\textcolor{LG}{\tsc{nomP}},name=nomp,
         tikz={
         \node[draw,circle,
-        xscale=0.75,yscale=0.95,
         fit=(nomp)(nom)(x)]{};
         }
             [\textcolor{LG}{\ac{nom}},name=nom,edge=LG]
@@ -1034,7 +1002,6 @@ I will climb a mountain today but he will not [climb a mountain today]
               [\tsc{nomP},name=nomp,
               tikz={
               \node[draw,circle,
-              xscale=0.75,yscale=0.95,
               fit=(nomp)(nom)(x)]{};
               }
                   [\ac{nom},name=nom]
@@ -1051,7 +1018,6 @@ I will climb a mountain today but he will not [climb a mountain today]
         [\textcolor{LG}{\tsc{nomP}},name=nomp,
         tikz={
         \node[draw,circle,
-        xscale=0.75,yscale=0.95,
         fit=(nomp)(nom)(x)]{};
         }
             [\textcolor{LG}{\ac{nom}},name=nom,
