--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -451,16 +451,6 @@
 
 %%not checked for doi anymore
 
-@incollection{caha2020,
-  title={Nanosyntax: some key features},
-  author={Caha, Pavel},
-  year={2020},
-  booktitle={The Cambridge handbook of Distributed Morphology},
-  editor={Artemis Alexiadou, Ruth Kramer, Alec Marantz, Isabel-Oltra Massuet},
-  adress={Cambridge},
-  publisher={Cambridge University Press}
-}
-
 @incollection{grimm1866,
   title={Über einige Fälle der Attraction},
   author={Grimm, Jacob},
@@ -470,6 +460,17 @@
   editor={Jacob  Grimm},
   pages={312--348},
   publisher={Dümmler}
+}
+
+
+@incollection{caha2020a,
+  title={Nanosyntax: some key features},
+  author={Caha, Pavel},
+  year={2020},
+  booktitle={The Cambridge handbook of Distributed Morphology},
+  adress={Cambridge},
+  editor={Artemis Alexiadou, Ruth Kramer, Alec Marantz, Isabel-Oltra Massuet},
+  publisher={Cambridge University Press}
 }
 
 @book{cinqueforthcoming,
