--- a/introduction.tex
+++ b/introduction.tex
@@ -83,13 +83,17 @@ The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears i
 The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
 
 Now consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript on the predicate.
-The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript on the predicate.
+The internal case is accusative. The predicate \tit{jains} `sent' takes accusative objects, as indicated by the subscript on the predicate.
+The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dative objects, as indicated by the subscript on the predicate.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the dative case. This dative can only come from the predicate \tit{taujau} `do', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
- what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc}
+\exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
+that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} {sent}\scsub{[acc]} he\\
+`that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc}
+
+% \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
+%  what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+%  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc}
 
 The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal accusative case.
 
