--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -26,20 +26,30 @@ The internal case is dative. The preposition \tit{ana} `on' takes dative complem
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{n}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
+%no examples with dative as internal case on verb
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects.
-The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects.
+The internal case is accusative. The predicate \tit{jains} `sent' takes accusative objects.
+The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
+%harbert gives 2 more examples
 
-\exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
- what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
+% \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
+%  what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+%  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
+
+% aiþþau hvaiwa galaubjand þammei ni hausidedun?
+% and how they believe  not heard
+% and how shall they believe in him of whom they have not heard? Rom 10:14
+
+\exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
+that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} {sent}\scsub{[acc]} he\\
+`that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc-rep}
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
@@ -48,6 +58,7 @@ The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes d
 The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+%habert gives another example
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
  but \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
@@ -58,6 +69,7 @@ The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above'
 The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
+%harbert gives another example
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
@@ -70,6 +82,7 @@ The internal case is accusative. The predicate \tit{frijos} `love' takes accusat
 The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+%single example
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
@@ -80,6 +93,7 @@ The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from
 The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
 The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{n}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
+%harbert refers to 3 more examples
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
@@ -117,6 +131,16 @@ Old High German is an example of a language that only allows the external case t
 This topic is the main focus of Part \ref{part:complexity} of this dissertation.}
 
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
+
+% The nativeness of the headless relative constructions under
+% consideration, and in particular those represented by group (I), can be
+% established for the moment by citing instances in which they occur independently
+% of the Greek, e.g., in which the Gothic modified relative clause
+% reflects a Greek participial construction or a noun, or instances in which
+% 18
+% they occur in opposition to the Greek. Evidence of the first type is
+% found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
+
 
 
 \section{In syntax}\label{sec:impl-hier}
