--- a/thesis.tex
+++ b/thesis.tex
@@ -43,7 +43,7 @@
 
 \part{The constant winner}\label{part:complexity}
 \include{recurring-pattern}
-\include{case-decomposition-meets-ellipsis}
+\include{case-decomposition}
 
 \part{The varying participants}\label{part:direction}
 \include{variation}
